Fixed Initial DB migration to run on fresh db instance.

--- a/Hosts/PaymentGateway.Hosts.WebApi/appsettings.json
+++ b/Hosts/PaymentGateway.Hosts.WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Initial Catalog=GatewayDB_Dev;Persist Security Info=False;User ID=sa;Password=111;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
+    "DefaultConnection": "Server=localhost;Initial Catalog=GatewayDB_TestNew;Persist Security Info=False;User ID=sa;Password=111;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
